// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mentions Can enter and backspace part of the Luke Skywalker mention 1`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span
    aria-controls="mentions-typeahead"
  >
    Luke
  </span>
</p>
`;

exports[`Mentions Can enter and backspace part of the Luke Skywalker mention 2`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    ﻿
  </span>
  <span
    class="mention"
    contenteditable="false"
    style="background-color: rgba(24, 119, 232, 0.2);"
    tabindex="-1"
  >
    Luke Skywalker
  </span>
  <span>
    ﻿
  </span>
</p>
`;

exports[`Mentions Can enter and backspace part of the Luke Skywalker mention 3`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    ﻿
  </span>
  <span
    class="mention"
    contenteditable="false"
    style="background-color: rgba(24, 119, 232, 0.2);"
    tabindex="-1"
  >
    Luke
  </span>
  <span>
    ﻿
  </span>
</p>
`;

exports[`Mentions Can enter and backspace part of the Luke Skywalker mention 4`] = `
<p
  class="editor-paragraph"
>
  <span>
    ﻿
  </span>
</p>
`;

exports[`Mentions Can enter and delete part of the Luke Skywalker mention 1`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span
    aria-controls="mentions-typeahead"
  >
    Luke
  </span>
</p>
`;

exports[`Mentions Can enter and delete part of the Luke Skywalker mention 2`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    ﻿
  </span>
  <span
    class="mention"
    contenteditable="false"
    style="background-color: rgba(24, 119, 232, 0.2);"
    tabindex="-1"
  >
    Luke Skywalker
  </span>
  <span>
    ﻿
  </span>
</p>
`;

exports[`Mentions Can enter and delete part of the Luke Skywalker mention 3`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    ﻿
  </span>
  <span
    class="mention"
    contenteditable="false"
    style="background-color: rgba(24, 119, 232, 0.2);"
    tabindex="-1"
  >
    Skywalker
  </span>
  <span>
    ﻿
  </span>
</p>
`;

exports[`Mentions Can enter and delete part of the Luke Skywalker mention 4`] = `
<p
  class="editor-paragraph"
>
  <span>
    ﻿
  </span>
</p>
`;

exports[`Mentions Can enter the Luke Skywalker mention 1`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span
    aria-controls="mentions-typeahead"
  >
    Luke
  </span>
</p>
`;

exports[`Mentions Can enter the Luke Skywalker mention 2`] = `
<p
  class="editor-paragraph"
  dir="ltr"
>
  <span>
    ﻿
  </span>
  <span
    class="mention"
    contenteditable="false"
    style="background-color: rgba(24, 119, 232, 0.2);"
    tabindex="-1"
  >
    Luke Skywalker
  </span>
  <span>
    ﻿
  </span>
</p>
`;
